exclude distribution test

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ config.json
 *.csv
 src/plot/3d_costdiagram_test.py
 resources/query_examples/countries.ipynb
+/resources/queries_fd/skew_example/p.py
