add txt to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ config.json
 *.png
 *.pdf
 *.csv
+*.txt
 src/plot/3d_costdiagram_test.py
 resources/query_examples/countries.ipynb
 /resources/queries_fd/skew_example/p.py
