add countries ipynd

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ resources/query_examples/countries.ipynb
 /resources/queries_fd/skew_example/p.py
 results/job/qplans/
 /Users/fridtjofdamm/Documents/thesis-robustness-benchmarking/results/job/qplans/
+/Users/fridtjofdamm/Documents/thesis-robustness-benchmarking/resources/query_examples/countries.ipynb
