--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,30 @@
-/tpch-kit
-/queryresults
-/tpch-tables
+
 *.tbl
-*.duckdb
 .python-version
 .DS_Store
 /build
 *.synctex.gz
 *.aux
-test.py
-inital_playground.py
-playground.py
 **/__pycache__
 *.wal
 *.tmp
 config.json
-/resources/queries_picasso
-/results/tpch/analyse
-/results/dummyresults
-/results/parameters_sf10
-/results/parameters_sf100
-/results/plots
-/results/postgres
-/results/queryresults_sf10
-/results/queryresults_sf100
-/results/job/qplans
 *.json
 src/plot/3d_costdiagram_test.py
 /resources/queries_fd/skew_example/p.py
 results/job/qplans/
 /Users/fridtjofdamm/Documents/thesis-robustness-benchmarking/results/job/qplans/
 *.ipynb
-/Users/fridtjofdamm/Documents/thesis-robustness-benchmarking/resources/query_examples/countries.ipynb
+/resources/query_examples/countries.ipynb
 resources/query_examples/countries.ipynb
 /src/src_archive/
 /results/archive
 /thesis
 .gitignore
+/src/utils/evaluate_query_exec_times.py
 # Except this path
 !/Users/fridtjofdamm/Documents/thesis-robustness-benchmarking/results/job/csvs/plottable
 !/Users/fridtjofdamm/Documents/thesis-robustness-benchmarking/resources/job_parameterized
 !/Users/fridtjofdamm/Documents/thesis-robustness-benchmarking/resources/queries_tpch
+!results/plots/execution_times
+
